联通sanyuan服务器

--- a/main/xiaozhi-server/config.yaml
+++ b/main/xiaozhi-server/config.yaml
@@ -447,6 +447,10 @@ LLM:
     type: ollama
     model_name: qwen2.5 #  使用的模型名称，需要预先使用ollama pull下载
     base_url: http://localhost:11434  # Ollama服务地址
+  SanyuanLLM:
+    # 定义LLM API类型
+    type: sanyuan
+    base_url: https://tool.wanwuweiai.com/api/chat/completions
   DifyLLM:
     # 定义LLM API类型
     type: dify
